--- a/index.html
+++ b/index.html
@@ -9,22 +9,43 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="intro.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
+    <!-- [Google Fonts] To embed your selected fonts into a webpage, copy this code into the <head> of your HTML document. -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Sunflower:300" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
+
+    <!-- <title>SaferTrip</title> -->
     <title>야옹씨의 안전한 하루</title>
 </head>
 <body>
-    <div class="mainPage">
+    <div id="mainPage">
         <!-- 1st Fade in : Falling stars -->
         <img id="fallingStars" src="Images/main_2_stars.svg" alt="Falling stars">
 
         <!-- 2nd Fade in : Title -->
+        <!-- <p id="title">SaferTrip</p> -->
         <p id="title">야옹씨의<br>안전한 하루</p>
 
         <!-- 3rd Fade in : slogan -->
+        <!-- <p id="slogan">Find safer paths to travel</p> -->
         <p id="slogan">내가 만들어나가는 우리동네 안전 지도</p>
 
+        <!-- <p id="paragraph">Kitty always patrols<br>tourist attractions to help people<br>to travel safely.<br><br>So, Kitty asks for your help.<br>Please let Kitty know<br>crime-ridden areas!<br><br>Based on what people tell Kitty,<br>Kitty will guide you<br>to safer paths to travel.</p> -->
+        <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
+
+<!-- 야옹씨의 안전한 하루
+내가 만들어나가는 우리동네 안전 지도 -->
     </div>
+    
+    <button type="button" class="btn btn-outline-success" id="test">test</button>
+    <!-- <div id="ovalOra÷nge"> -->
+        <div class="options" id="option1">Option 1</div>
+        <div class="options" id="option2">Option 2</div>
+        <div class="options" id="option3">Option 3</div>
+        <div class="options" id="option4">Option 4</div>
+        <div class="options" id="option5">Option 5</div>
+    <!-- </div> -->
 </body>
 <footer>
     <!-- Bootstrap 4.0 : jQuery first, then Popper.js, then Bootstrap JS -->
