--- a/index.html
+++ b/index.html
@@ -33,19 +33,16 @@
 
         <!-- <p id="paragraph">Kitty always patrols<br>tourist attractions to help people<br>to travel safely.<br><br>So, Kitty asks for your help.<br>Please let Kitty know<br>crime-ridden areas!<br><br>Based on what people tell Kitty,<br>Kitty will guide you<br>to safer paths to travel.</p> -->
         <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
-
-<!-- 야옹씨의 안전한 하루
-내가 만들어나가는 우리동네 안전 지도 -->
     </div>
-    
-    <button type="button" class="btn btn-outline-success" id="test">test</button>
-    <!-- <div id="ovalOra÷nge"> -->
-        <div class="options" id="option1">Option 1</div>
-        <div class="options" id="option2">Option 2</div>
-        <div class="options" id="option3">Option 3</div>
-        <div class="options" id="option4">Option 4</div>
-        <div class="options" id="option5">Option 5</div>
-    <!-- </div> -->
+
+    <div class="container">
+        <button type="button" class="btn btn-outline-success" id="test">test</button>
+        <div class="options" id="option1"><span>인적이<br>드물어요</span></div>
+        <div class="options" id="option2"><span>어두워요</span></div>
+        <div class="options" id="option3"><span>사고가<br>난 적<br>있어요</span></div>
+        <div class="options" id="option4"><span>유흥가에요</span></div>
+        <div class="options" id="option5"><span>기타</span></div>
+    </div>
 </body>
 <footer>
     <!-- Bootstrap 4.0 : jQuery first, then Popper.js, then Bootstrap JS -->
