--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <div class="container">
         <button type="button" class="btn btn-outline-success" id="test">test</button>
-        <div class="options" id="option1"><span>인적이<br>드물어요</span></div>
-        <div class="options" id="option2"><span>어두워요</span></div>
-        <div class="options" id="option3"><span>사고가<br>난 적<br>있어요</span></div>
-        <div class="options" id="option4"><span>유흥가에요</span></div>
-        <div class="options" id="option5"><span>기타</span></div>
+        <div class="options" class="withoutInput" id="option1"><span>인적이<br>드물어요</span></div>
+        <div class="options" class="withoutInput" id="option2"><span>어두워요</span></div>
+        <div class="options" class="withoutInput" id="option3"><span>사고가<br>난 적<br>있어요</span></div>
+        <div class="options" class="withoutInput" id="option4"><span>유흥가에요</span></div>
+        <div class="options" class="withInput" id="option5"><span>기타</span></div>
     </div>
 </body>
 <footer>
