--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
         <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <button type="button" class="btn btn-outline-success" id="test">test</button>
         <div class="options" class="withoutInput" id="option1"><span>인적이<br>드물어요</span></div>
         <div class="options" class="withoutInput" id="option2"><span>어두워요</span></div>
         <div class="options" class="withoutInput" id="option3"><span>사고가<br>난 적<br>있어요</span></div>
         <div class="options" class="withoutInput" id="option4"><span>유흥가에요</span></div>
         <div class="options" class="withInput" id="option5"><span>기타</span></div>
+    </div> -->
+    <div class="container">
+        <button type="button" class="btn btn-outline-success" id="test">test</button>
+        <div class="options" class="withoutInput" id="option1"><span>Lonesome<br>road</span></div>
+        <div class="options" class="withoutInput" id="option2"><span>Too<br>Dark</span></div>
+        <div class="options" class="withoutInput" id="option3"><span>There<br>was an<br>incident</span></div>
+        <div class="options" class="withoutInput" id="option4"><span>Red-light<br>district</span></div>
+        <div class="options" class="withInput" id="option5"><span>Etc</span></div>
     </div>
 </body>
 <footer>
