thx-u, cancel, text-input popup messages completed

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.0/sweetalert.min.js"></script> -->
 
     <!-- sweetalert2 -->
-    <!-- [tutsplus] Creating Pretty Popup Messages Using SweetAlert2 -->
-    <!-- You can also get a CDN link for the latest version of the library and include it in your webpage using script tags: -->
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-    <!-- Besides the JavaScript file, you will also have to load a CSS file which is used to style all the alert boxes created by the library: -->
+    <!-- CSS -->
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+
 
     <!-- sweetalert for Bootstrap -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js"></script> -->
