background image issue : solved

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <!-- sweetalert for Bootstrap -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js"></script> -->
 
-    <!-- <title>SaferTrip</title> -->
-    <title>야옹씨의 안전한 하루</title>
+    <title>SaferTrip</title>
+    <!-- <title>야옹씨의 안전한 하루</title> -->
 </head>
 <body>
     <div id="mainPage">
@@ -44,12 +44,12 @@
         <!-- <img id="fallingStars"> -->
 
         <!-- 2nd Fade in : Title -->
-        <!-- <p id="title">SaferTrip</p> -->
-        <p id="title">야옹씨의<br>안전한 하루</p>
+        <p id="title">SaferTrip</p>
+        <!-- <p id="title">야옹씨의<br>안전한 하루</p> -->
 
         <!-- 3rd Fade in : slogan -->
-        <!-- <p id="slogan">Find safer paths to travel</p> -->
-        <p id="slogan">내가 만들어나가는 우리동네 안전 지도</p>
+        <p id="slogan">Find safer paths to travel</p>
+        <!-- <p id="slogan">내가 만들어나가는 우리동네 안전 지도</p> -->
 
         <!-- <p id="paragraph">Kitty always patrols<br>tourist attractions to help people<br>to travel safely.<br><br>So, Kitty asks for your help.<br>Please let Kitty know<br>crime-ridden areas!<br><br>Based on what people tell Kitty,<br>Kitty will guide you<br>to safer paths to travel.</p> -->
         <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
