--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 
     <!-- sweetalert2 -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.0/sweetalert.min.js"></script> -->
@@ -30,26 +30,30 @@
     <!-- CSS -->
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 
-
     <!-- sweetalert for Bootstrap -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js"></script> -->
 
-    <title>SaferTrip</title>
-    <!-- <title>야옹씨의 안전한 하루</title> -->
+    <title class="lang" key="tabTitle"></title>
 </head>
 <body>
+    <button type="button" class="btn btn-outline-secondary" class="translate" id="en-us">English</button>
+    <button type="button" class="btn btn-outline-secondary" class="translate" id="ko">한국어</button>
+
     <div id="mainPage">
         <!-- 1st Fade in : Falling stars -->
         <img id="fallingStars" src="Images/main_2_stars.svg" alt="Falling stars">
 
         <!-- 2nd Fade in : Title -->
-        <p id="title">SaferTrip</p>
+        <p class="lang" key="mainPgTitle" id="title"></p>
         <!-- <p id="title">야옹씨의<br>안전한 하루</p> -->
-
+        <!-- <p id="title">SaferTrip</p> -->
+        
         <!-- 3rd Fade in : slogan -->
-        <p id="slogan">Find safer paths to travel</p>
+        <p class="lang" key="subTitle" id="slogan"></p>
         <!-- <p id="slogan">내가 만들어나가는 우리동네 안전 지도</p> -->
+        <!-- <p id="slogan">Find safer paths to travel</p> -->
 
+        <p class="lang" key="story"></p>
         <!-- <p id="paragraph">Kitty always patrols<br>tourist attractions to help people<br>to travel safely.<br><br>So, Kitty asks for your help.<br>Please let Kitty know<br>crime-ridden areas!<br><br>Based on what people tell Kitty,<br>Kitty will guide you<br>to safer paths to travel.</p> -->
         <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
     </div>
@@ -62,13 +66,21 @@
         <div class="options" class="withoutInput" id="option4"><span>유흥가에요</span></div>
         <div class="options" class="withInput" id="option5"><span>기타</span></div>
     </div> -->
-    <div class="container">
+    <!-- <div class="container">
         <button type="button" class="btn btn-outline-success" id="test">test</button>
         <div class="options" class="withoutInput" id="option1"><span>Lonesome<br>road</span></div>
         <div class="options" class="withoutInput" id="option2"><span>Too<br>Dark</span></div>
         <div class="options" class="withoutInput" id="option3"><span>There<br>was an<br>incident</span></div>
         <div class="options" class="withoutInput" id="option4"><span>Red-light<br>district</span></div>
         <div class="options" class="withInput" id="option5"><span>Etc</span></div>
-    </div>
+    </div> -->
+    <div class="container">
+            <button type="button" class="btn btn-outline-success" id="test">test</button>
+            <div class="options" class="lang" key="firstOption"  class="withoutInput" id="option1"><span></span></div>
+            <div class="options" class="lang" key="secondOption" class="withoutInput" id="option2"><span></span></div>
+            <div class="options" class="lang" key="thirdOption" class="withoutInput" id="option3"><span></span></div>
+            <div class="options" class="lang" key="fourthOption" class="withoutInput" id="option4"><span></span></div>
+            <div class="options" class="lang" key="fifthOption" class="withInput" id="option5"><span></span></div>
+        </div>
 </body>
 </html>
