added language options (doesn't work on buttons)

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <title class="lang" key="tabTitle"></title>
 </head>
 <body>
-    <button type="button" class="btn btn-outline-secondary" class="translate" id="en-us">English</button>
-    <button type="button" class="btn btn-outline-secondary" class="translate" id="ko">한국어</button>
+    <!-- <button type="button" class="btn btn-outline-secondary" class="translate" id="en-us">English</button>
+    <button type="button" class="btn btn-outline-secondary" class="translate" id="ko">한국어</button> -->
+    <button class="translate" id="en-us">English</button>
+    <button class="translate" id="ko">Korean</button>
 
     <div id="mainPage">
         <!-- 1st Fade in : Falling stars -->
@@ -53,7 +55,7 @@
         <!-- <p id="slogan">내가 만들어나가는 우리동네 안전 지도</p> -->
         <!-- <p id="slogan">Find safer paths to travel</p> -->
 
-        <p class="lang" key="story"></p>
+        <!-- <p class="lang" key="story"></p> -->
         <!-- <p id="paragraph">Kitty always patrols<br>tourist attractions to help people<br>to travel safely.<br><br>So, Kitty asks for your help.<br>Please let Kitty know<br>crime-ridden areas!<br><br>Based on what people tell Kitty,<br>Kitty will guide you<br>to safer paths to travel.</p> -->
         <!-- <p id="paragraph">야옹씨는 사람들이 안전하게<br>여행할 수 있도록<br>항상 여행지를 순찰하는<br>좋은 길고양이에요.<br><br>그래서 야옹씨는<br>여러분들에게 도움을 청해요.<br>위험해보이는 길을<br>알고있다면 알려주세요!<br><br>여러분이 알려주신<br>정보를 기반으로<br>위험 지역을 피한<br>안전한 길로 안내해 드릴 거에요.</p> -->
     </div>
@@ -66,21 +68,21 @@
         <div class="options" class="withoutInput" id="option4"><span>유흥가에요</span></div>
         <div class="options" class="withInput" id="option5"><span>기타</span></div>
     </div> -->
-    <!-- <div class="container">
+    <div class="container">
         <button type="button" class="btn btn-outline-success" id="test">test</button>
         <div class="options" class="withoutInput" id="option1"><span>Lonesome<br>road</span></div>
         <div class="options" class="withoutInput" id="option2"><span>Too<br>Dark</span></div>
         <div class="options" class="withoutInput" id="option3"><span>There<br>was an<br>incident</span></div>
         <div class="options" class="withoutInput" id="option4"><span>Red-light<br>district</span></div>
         <div class="options" class="withInput" id="option5"><span>Etc</span></div>
+    </div>
+    <!-- <div class="container">
+        <button type="button" class="btn btn-outline-success" id="test">test</button>
+        <div class="options" class="lang" key="firstOption"  class="withoutInput" id="option1"><span></span></div>
+        <div class="options" class="lang" key="secondOption" class="withoutInput" id="option2"><span></span></div>
+        <div class="options" class="lang" key="thirdOption" class="withoutInput" id="option3"><span></span></div>
+        <div class="options" class="lang" key="fourthOption" class="withoutInput" id="option4"><span></span></div>
+        <div class="options" class="lang" key="fifthOption" class="withInput" id="option5"><span></span></div>
     </div> -->
-    <div class="container">
-            <button type="button" class="btn btn-outline-success" id="test">test</button>
-            <div class="options" class="lang" key="firstOption"  class="withoutInput" id="option1"><span></span></div>
-            <div class="options" class="lang" key="secondOption" class="withoutInput" id="option2"><span></span></div>
-            <div class="options" class="lang" key="thirdOption" class="withoutInput" id="option3"><span></span></div>
-            <div class="options" class="lang" key="fourthOption" class="withoutInput" id="option4"><span></span></div>
-            <div class="options" class="lang" key="fifthOption" class="withInput" id="option5"><span></span></div>
-        </div>
 </body>
 </html>
