--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 <body>
     <!-- <button type="button" class="btn btn-outline-secondary" class="translate" id="en-us">English</button>
     <button type="button" class="btn btn-outline-secondary" class="translate" id="ko">한국어</button> -->
-    
-    <button class="translate langBtn" id="en-us">English</button>
-    <button class="translate langBtn" id="ko">Korean</button>
+
+    <!-- https://github.com/sweetalert2/sweetalert2/issues/1199 : asked if it was a broken functionality -->
+
+    <!-- force to refresh the page : in order to update SweetAlert messages -->
+    <button class="translate langBtn" id="en-us" value="Refresh Page" onClick="window.location.reload()">English</button>
+    <button class="translate langBtn" id="ko" value="Refresh Page" onClick="window.location.reload()">한국어</button>
     <!-- `Bootstrap` button didn't work. So, I couldn't use it here. -->
 
     <div id="mainPage">
