modified some info that overlapped with what I uploaded in the after_merge folder

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <!-- https://github.com/sweetalert2/sweetalert2/issues/1199 : asked if it was a broken functionality -->
 
     <!-- force to refresh the page : in order to update SweetAlert messages -->
-    <button class="translate langBtn" id="en-us" value="Refresh Page" onClick="window.location.reload()">English</button>
-    <button class="translate langBtn" id="ko" value="Refresh Page" onClick="window.location.reload()">한국어</button>
-
+    <button class="translate langBtnMain" id="en-us" value="Refresh Page" onClick="window.location.reload()">English</button>
+    <button class="translate langBtnMain" id="ko" value="Refresh Page" onClick="window.location.reload()">한국어</button>
+    
     <div id="mainPage">
         <!-- 1st Fade in : Falling stars -->
         <img id="fallingStars" src="image/main_2_stars.svg" alt="Falling stars">
